layout example style applied

--- a/src/main-web/app/shared/styles/app.global.scss
+++ b/src/main-web/app/shared/styles/app.global.scss
@@ -1,1 +1,14 @@
-//@import "../../../../thirdparty-libs/clarity-ui/clarity-ui.min.css";
+html {
+  height: 100%;
+}
+
+body {
+  background-color: #0d0d0d;
+  color: #cecece;
+  height: 100%;
+}
+
+a {
+  text-decoration: none;
+  color: #cecece;
+}
