apply media query for mobile to test flex

--- a/src/main-web/app/experiment/grid/grid.scss
+++ b/src/main-web/app/experiment/grid/grid.scss
@@ -10,14 +10,8 @@ img {
   border: 1px solid #fff;
 }
 
-.div1 {
-  background-color: purple;
-}
-
-.div2 {
-  background-color: darkslateblue;
-}
-
-.div3 {
-  background-color: indianred;
+@media screen and (max-width: 750px) {
+  .snap-section {
+    flex-flow: row wrap;
+  }
 }
