upgraded ng to 4.2.0-rc.1

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -5,7 +5,10 @@
   <title>JazzyRedfaces' Lab Session</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link rel="icon" type="image/x-icon" href="imgs/favicon.ico"/>
+  <link rel="icon" type="image/x-icon" href="assets/imgs/favicon.ico"/>
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/styles/default.min.css">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/highlight.min.js"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
 <rf-entry></rf-entry>
