--- a/src/main-web/app/app.scss
+++ b/src/main-web/app/app.scss
@@ -15,10 +15,13 @@
   display: flex;
   justify-content: space-between;
   ul {
+    width: 100%;
     padding: 0 5% 0 0;
   }
   li {
+    display: inline-block;
     list-style: none;
+    margin-right: 4%;
   }
 }
 
