--- a/src/main-web/app/shared/styles/app.global.scss
+++ b/src/main-web/app/shared/styles/app.global.scss
@@ -9,7 +9,11 @@ body {
   margin: 1% 3%;
 }
 
-a {
+header a, nav a {
   text-decoration: none;
   color: #cecece;
+}
+
+p a {
+  text-decoration: underline;
 }
