--- a/src/app/experiment/turntables/turntables.html
+++ b/src/app/experiment/turntables/turntables.html
@@ -1,2 +1,3 @@
 <div>DJ Turntables</div>
-<rf-vinyle></rf-vinyle>
+<rf-vinyle [config]="leftVinyle"></rf-vinyle>
+<rf-vinyle [config]="rightVinyle"></rf-vinyle>
