rpm converted to second

--- a/src/app/experiment/turntables/turntables.html
+++ b/src/app/experiment/turntables/turntables.html
@@ -1,3 +1,4 @@
 <div>DJ Turntables</div>
 <rf-vinyle [config]="leftVinyle"></rf-vinyle>
+<rf-mixer></rf-mixer>
 <rf-vinyle [config]="rightVinyle"></rf-vinyle>
