--- a/src/app/experiment/turntables/vinyle/vinyle.html
+++ b/src/app/experiment/turntables/vinyle/vinyle.html
@@ -1,1 +1,1 @@
-<div [ngClass]="setDirection()" class="vinyle_skin vinyle_strt">Vinyle spin</div>
+<div [ngClass]="setDirection()" [ngStyle]="style" class="vinyle_skin vinyle_strt">Vinyle spin</div>
