in process of rf pitch

--- a/src/app/experiment/turntables/mixer/mixer.component.html
+++ b/src/app/experiment/turntables/mixer/mixer.component.html
@@ -1,6 +1,9 @@
 <p>
   mixer works!
 </p>
+<div class="pitch-fader">
+  <input type="range" min="30" max="100">
+</div>
 <!--<rf-pitch></rf-pitch>-->
 <!--<rf-pitch></rf-pitch>-->
 <!--<rf-crossfader></rf-crossfader>-->
