--- a/src/app/experiment/turntables/mixer/mixer.component.html
+++ b/src/app/experiment/turntables/mixer/mixer.component.html
@@ -1,9 +1,6 @@
 <p>
   mixer works!
 </p>
-<div class="pitch-fader">
-  <input type="range" min="30" max="100">
-</div>
-<!--<rf-pitch></rf-pitch>-->
-<!--<rf-pitch></rf-pitch>-->
+<rf-pitch-controller></rf-pitch-controller>
+<rf-pitch-controller></rf-pitch-controller>
 <!--<rf-crossfader></rf-crossfader>-->
